--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(lightdelay)
-
 set(CMAKE_CXX_STANDARD 14)
-
 aux_source_directory(src DIR_SRCS)
+add_subdirectory(3rdparty)
 add_executable(lightdelay ${DIR_SRCS})
+target_link_libraries(lightdelay yaml-cpp)
