--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/yml-cpp"]
 	path = 3rdparty/yml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "3rdparty/spdlog"]
+	path = 3rdparty/spdlog
+	url = https://github.com/gabime/spdlog.git
