--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ aux_source_directory(src DIR_SRCS)
 aux_source_directory(src/thread_pool DIR_SRCS_TP)
 add_subdirectory(3rdparty)
 add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP})
-target_link_libraries(lightdelay yaml-cpp)
+target_link_libraries(lightdelay yaml-cpp spdlog::spdlog)
