--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,12 @@ set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(src DIR_SRCS)
 aux_source_directory(src/thread_pool DIR_SRCS_TP)
 add_subdirectory(3rdparty)
+include_directories(include)
+find_package(hiredis)
+if (NOT hiredis_FOUND)
+    message(ERROR "hiredis Not Found!!!")
+endif ()
+include_directories(${hiredis_INCLUDE_DIRS})
 add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP})
-target_link_libraries(lightdelay yaml-cpp spdlog::spdlog)
+
+target_link_libraries(lightdelay yaml-cpp spdlog::spdlog ${hiredis_LIBRARIES})
