--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,23 @@ aux_source_directory(src/thread_pool DIR_SRCS_TP)
 add_subdirectory(3rdparty)
 include_directories(include)
 find_package(hiredis)
+find_package(RdKafka)
 if (NOT hiredis_FOUND)
-    message(ERROR "hiredis Not Found!!!")
+    message(FATAL_ERROR "hiredis Not Found!!!")
 endif ()
+if (NOT RdKafka_FOUND)
+    message(FATAL_ERROR "RdKafka Not Found!!!")
+endif ()
+set(RdKafka_INCLUDE_DIRS "${RdKafka_DIR}/../../../include")
 include_directories(${hiredis_INCLUDE_DIRS})
+include_directories(${RdKafka_INCLUDE_DIRS})
+link_directories(${RdKafka_DIR}/../../../bin)
 add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP})
 
-target_link_libraries(lightdelay yaml-cpp spdlog::spdlog ${hiredis_LIBRARIES})
+target_link_libraries(
+    lightdelay
+    yaml-cpp
+    spdlog::spdlog
+    ${hiredis_LIBRARIES}
+    rdkafka++
+)
