--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(lightdelay)
 set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(src DIR_SRCS)
 aux_source_directory(src/thread_pool DIR_SRCS_TP)
+aux_source_directory(src/win32 DIR_SRCS_WIN32)
 add_subdirectory(3rdparty)
 include_directories(include)
 find_package(hiredis)
@@ -17,7 +18,7 @@ set(RdKafka_INCLUDE_DIRS "${RdKafka_DIR}/../../../include")
 include_directories(${hiredis_INCLUDE_DIRS})
 include_directories(${RdKafka_INCLUDE_DIRS})
 link_directories(${RdKafka_DIR}/../../../bin)
-add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP})
+add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP} ${DIR_SRCS_WIN32})
 
 target_link_libraries(
     lightdelay
