--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(src DIR_SRCS)
 aux_source_directory(src/thread_pool DIR_SRCS_TP)
 aux_source_directory(src/win32 DIR_SRCS_WIN32)
+aux_source_directory(src/ini DIR_SRCS_INI)
+aux_source_directory(src/ini/cpp DIR_SRCS_INI_CPP)
 add_subdirectory(3rdparty)
 include_directories(include)
 find_package(hiredis)
@@ -18,11 +20,17 @@ set(RdKafka_INCLUDE_DIRS "${RdKafka_DIR}/../../../include")
 include_directories(${hiredis_INCLUDE_DIRS})
 include_directories(${RdKafka_INCLUDE_DIRS})
 link_directories(${RdKafka_DIR}/../../../bin)
-add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP} ${DIR_SRCS_WIN32})
+add_executable(
+        lightdelay
+        ${DIR_SRCS}
+        ${DIR_SRCS_TP}
+        ${DIR_SRCS_WIN32}
+        ${DIR_SRCS_INI}
+        ${DIR_SRCS_INI_CPP}
+)
 
 target_link_libraries(
     lightdelay
-    yaml-cpp
     spdlog::spdlog
     ${hiredis_LIBRARIES}
     rdkafka++
